# tGFX

./: .clang-format  .clang-format-ignore  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/gfx-demo-x86/: CMakeLists.txt  README.md  gfx-demo-x86.c  gfx.h  logo.c  main.c
examples/gfx-library/: gfx.c
examples/gfx-real-time-demo-x86/: CMakeLists.txt  README.md  gfx-real-time-demo-x86.c
include/: tGFX.h
include/tGFX/: basic565.h  tools.h
include/tGFX/565/: basic.h  font.h
include/tGFX/font/: 5x7.h  5x8.h  font.h
scripts/: build-x11-example.sh  build-x11-real-time-example.sh  run-clang-format.sh
src/: tGFX.c  tools.c
src/565/: basic.c  font.c
